Change-log

Note
-Use TABS(4 spaces tabs) not SPACES for everything
-Use code only under MIT License
-Use images only under Creative Commons License
-Duplicate Class Names and Student ID are NOT ALLOWED

To-Do
-Rebuild index page

October 12 2017
-Fixed a bug, on boot, where the site will not load if it was fetching for data.
-Moved server creation to express

October 11 2017
-Added more API endpoints

October 8 2017 
-Created GitHub 
-Enabled MongoDB Server 
-Allowed version control

October 1 2017
-Built an API for GET requests for students, assignments, and classes collections
--GET request data can be viewed via /api/[Collection-Name]

September 29 2017
-Added new student performance benchmarks
-Added student filtering by SPED/ELL

September 26 2017
-Added student filtering by gender

September 22 2017
-Enabled viewing student data for assignmentStats page
-Removed animation for studentlist
-Added non-functioning filters to assignmentStats

September 16 2017
-Merged newClass and removeClass into the classes file
-Added modal to classes page
-Added student grade along with comments per assignment
-Added a scatter/bubble graph with above, below, and at average model

September 9 2017
-Added graded vs ungraded chart to assignment stats
-Vastly improved assignment statistics performance
-Added student vs class comparisons for assignment statistics

September 8 2017
-Added Report/Suspension counts for dynamicStudent
-Fixed a bug where assignment statistics crash
-Improved assignment statistics performance

September 1 2017
-Fixed various duplications in HTML/CSS

August 31 2017
-Rebuilt rubric viewer
-Rebuilt grading
--getRubricJSON.js marked

August 30 2017
-Rubric Creator temporarily moved to /testing
-Overhauled rubric-creator, view at /testing
--addSection.js | rubricDataParser.js - Removed

August 29 2017
-Added a new pre-alpha rubric-creator, view at /testing

August 28 2017
-Added report counts and how many are failing to General Statistics