@@ -17,4 +17,5 @@ module.exports = app => {
             res.send(docs);
         });
     });
+    
 };
