@@ -1,7 +1,7 @@
 const ObjectID = require('mongodb').ObjectID;
 
 module.exports = app => {
-    app.get('/api/classes', (req, res) => {
+    app.get('/api/classes', (req, res) => { //Finds all classes
         const db = req.app.locals.db;
         db.collection('classes').find().toArray( (err, docs) => {
             if (err) console.log(err.stack);
@@ -9,7 +9,7 @@ module.exports = app => {
         });
     });
     
-    app.get('/api/classes/:id', (req, res) => {
+    app.get('/api/classes/:id', (req, res) => { //Finds all classes with the given ID
         const db = req.app.locals.db;
         const id = parseInt(req.params.id);
         db.collection('classes').find({ id }).toArray( (err, docs) => {
@@ -18,7 +18,27 @@ module.exports = app => {
         });
     });
     
-    app.post('/api/classes/newClass', function(req, res) {
+    app.get('/api/classes/getAssignmentNames/:name/', (req, res) => { //Finds all assignment names in classes
+        const db = req.app.locals.db;
+        const name = req.params.name;
+        db.collection('classes').find({name}).toArray((err, docs) => {
+            if (err) {
+                console.log(err.stack);
+            } else {
+                var classID = docs[0].id;
+                db.collection('assignments').find({'classID':classID},{'assignmentName':1,'_id':0}).toArray(function(err, assignmentNames) {
+                    if (err) {
+                        console.log(err);
+                    }
+                    else {
+                        res.send(assignmentNames);
+                    }
+                });
+            }
+        });
+    });
+    
+    app.post('/api/classes/newClass', function(req, res) { //Creates a new class
         const db = req.app.locals.db;
         db.collection('classes').find({}).toArray(function(err, result) {
             if (err) {
@@ -35,7 +55,7 @@ module.exports = app => {
                     if (err) {
                         console.log(err);
                     } else {
-                        res.send('Success')
+                        res.send('Success');
                     }
                 });
             }
