@@ -54,23 +54,3 @@ function parseData(rubricObject, domReference) {
 function printPage(){
     window.print();
 }
-
-/*
-$('#search_rubric').on('submit', function(event) {
-        event.preventDefault();
-        var search = $('#rubricSearch');
-        $.ajax({
-            url: '/api/rubrics/getRubric',
-            method: 'POST',
-            contentType: 'application/json',
-            data: JSON.stringify({rubricName:search.val()}),
-            success: function(response) {
-                console.log(response)
-                $('tbody').empty();
-                $('#submit_student').click();
-                parseData(response[0], 'table');
-                search.val('');
-            }
-        });
-    });
-    */
